   - ofaTVARecordProperties: port to new formula engine.
 
 Bug fixes:

   - myIGridList: fix the line removing.
   - myIWindow: fix key value when saving default position.
   - myIWindow: does not close currently running window when closing the dossier.
   - ofaFormulaEngine: fix operation operator backslashing.
   - ofaIDBConnect: does not try to restore when no period is found.
   - ofsOpe: make sure the operation is valid before compare.
   - ofoOpeTemplate: takes into account the row number placeholder. 
   - ofoTVAForm: fix import.

 Other changes:

   - myIGridList: review the interface.
   - my_utils_quote_sql(): new function.
   - ofo_account_archive_open_balances(): moved to ofo_account_archive_balances(). 
   - ofaPeriodClose: new dialog.

-----------------------------------------------------------------------
 Version 0.54
 ============

 Released on 2016-04-12
  
 New features and improvements:

   New formula engine.

   - DDL Core v 30
   - myIDialog: provides  a default error message.
   - myIWindow: improve size and position management (todo #1054).
   - myThousandCombo: new class for thousand separator selection.
   - ofaMainWindow: setup accelerators (todo #40).
   - ofaMainWindow: may display an image on a per-dossier basis (todo #669).
   - ofaMysql: implements ofaIAbout interface.
   - ofaMysql: implements ofaIProperties interface.
   - ofaExportAssistant: makes use of ofaStreamformatDisp (todo #1057).
   - ofaIDBModel, ofaCheckIntegrityBin, ofaImportAssistant: scroll textview when adding text (todo #1056).
   - ofaImport: save table before insertion, restoring it on error (todo #1061).
   - ofaPluginManager: displays instanciated objects (todo #1066).
   - ofaPluginManager: displays About page (todo #1066).
   - ofaPluginManager: displays Properties page (todo #1066).
   - ofaStreamFormat: remove 'has headers' indicator.
   - ofaStreamFormatBin: homogeneize character display (todo #1063).