@@ -47,7 +47,9 @@
    - myIWindow: fix key value when saving default position.
    - myIWindow: does not close currently running window when closing the dossier.
    - ofaFormulaEngine: fix operation operator backslashing.
+   - ofaICollector: free the collections when closing the dossier (todo #1080).
    - ofaIDBConnect: does not try to restore when no period is found.
+   - ofaISingleKeeper: release the objects when closing the dossier (todo #1080).
    - ofsOpe: make sure the operation is valid before compare.
    - ofoOpeTemplate: takes into account the row number placeholder. 
    - ofoTVAForm: fix import.
